bugfix for invisible data tab

--- a/default.css
+++ b/default.css
@@ -36,7 +36,6 @@ body {
   background-image: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAI0lEQVQIW2NkYGD4f+/ePSAFAYxAzn84D1lASUmJAaQSQwUAcxYRaXDVJ6QAAAAASUVORK5CYII=);
 }
 #data {
-  display:none;
   background-color:white;
   width:100%;
   height:100%;
